--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,8 @@ form {
     border-radius: 7px;
     font-family: 'Abril Fatface', cursive;
     letter-spacing: 1px;
-    box-shadow: 2px 0px 5px rgb(109, 109, 109), 0px 2px 5px rgb(109, 109, 109), -2px 0px 5px rgb(109, 109, 109), 0px -2px 5px rgb(109, 109, 109);
+    box-shadow: 2px 0px 5px rgb(109, 109, 109), 0px 2px 5px rgb(109, 109, 109), 
+    -2px 0px 5px rgb(109, 109, 109), 0px -2px 5px rgb(109, 109, 109);
 
 }
 
@@ -127,6 +128,24 @@ td {
 table {
     border-collapse:collapse;
     color: white;
+}
+
+.notReadButton {
+    background-color: #f5f5f5b5;
+    border: #f5f5f5b5;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.switnotReadButtonch:hover {
+    cursor: pointer;
+}
+
+.readButton {
+    background-color: var(--extra-color);
+    border: var(--extra-color);
+    border-radius: 5px;
+    padding: 5px;
 }
 
 .removeButton {
