Fix read/not read toggle button

--- a/styles.css
+++ b/styles.css
@@ -130,23 +130,26 @@ table {
     color: white;
 }
 
+.readButton {
+    background-color: rgb(38, 141, 86) !important;
+    border-radius: 5px;
+    padding: 7px;
+    color: white;
+}
+
 .notReadButton {
     background-color: #f5f5f5b5;
-    border: #f5f5f5b5;
+    border: solid black;
     border-radius: 5px;
-    padding: 5px;
+    padding: 7px;
 }
 
-.switnotReadButtonch:hover {
+.readButton:hover, .notReadButton:hover {
     cursor: pointer;
+    background-color: rgb(172, 172, 172);
 }
 
-.readButton {
-    background-color: var(--extra-color);
-    border: var(--extra-color);
-    border-radius: 5px;
-    padding: 5px;
-}
+
 
 .removeButton {
     border: none;
