--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,6 @@ form {
 #topForm {
     display: flex;
     justify-content: space-between;
-    gap: 40px;
 }
 
 .labelContainer {
@@ -93,8 +92,23 @@ form {
     transform: translate(1px, 1px);
 }
 
+#submitButton:disabled {
+    cursor: default;
+    background-color: #94857b;
+    box-shadow: none;
+}
+
+#submitButton:disabled:active {
+    transform: none;
+}
+
+#submitButton:hover:active {
+    background-color: #94857b;
+}
+
 fieldset {
     border: none;
+    width: 25%;
     padding: 0px;
     gap: 10px;
     display: flex;
